--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,8 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>opencv2</build_depend>
+  <build_depend>mongodb_store_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   
   <run_depend>mongodb_store</run_depend>
   <run_depend>rospy</run_depend>
@@ -30,6 +32,8 @@
   <run_depend>opencv2</run_depend>
   <run_depend>nodejs</run_depend>
   <run_depend>rubygem-jekyll</run_depend>
+  <run_depend>mongodb_store_msgs</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 
   <buildtool_depend>ruby1.9.3</buildtool_depend>
   <buildtool_depend>nodejs</buildtool_depend>
