--- a/package.xml
+++ b/package.xml
@@ -4,14 +4,14 @@
   <version>0.1.1</version>
   <description>The robblog package</description>
 
-  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
+  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>
 
 
   <license>MIT</license>
  
   <!-- <url type="website">http://wiki.ros.org/robblog</url> -->
 
-  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author> -->
+  <author email="nickh@robots.ox.ac.uk">Nick Hawes</author> -->
 
 
   <buildtool_depend>catkin</buildtool_depend>
